; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/p54/extr_p54usb.c_p54u_lm87_chksum.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/p54/extr_p54usb.c_p54u_lm87_chksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64)* @p54u_lm87_chksum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @p54u_lm87_chksum(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  store i32 0, i32* %5, align 4
  %6 = load i64, i64* %4, align 8
  %7 = lshr i64 %6, 2
  store i64 %7, i64* %4, align 8
  br label %8

8:                                                ; preds = %12, %2
  %9 = load i64, i64* %4, align 8
  %10 = add i64 %9, -1
  store i64 %10, i64* %4, align 8
  %11 = icmp ne i64 %9, 0
  br i1 %11, label %12, label %24

12:                                               ; preds = %8
  %13 = load i32*, i32** %3, align 8
  %14 = getelementptr inbounds i32, i32* %13, i32 1
  store i32* %14, i32** %3, align 8
  %15 = load i32, i32* %13, align 4
  %16 = call i32 @le32_to_cpu(i32 %15)
  %17 = load i32, i32* %5, align 4
  %18 = xor i32 %17, %16
  store i32 %18, i32* %5, align 4
  %19 = load i32, i32* %5, align 4
  %20 = ashr i32 %19, 5
  %21 = load i32, i32* %5, align 4
  %22 = shl i32 %21, 3
  %23 = xor i32 %20, %22
  store i32 %23, i32* %5, align 4
  br label %8

24:                                               ; preds = %8
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @cpu_to_le32(i32 %25)
  ret i32 %26
}

declare dso_local i32 @le32_to_cpu(i32) #1

declare dso_local i32 @cpu_to_le32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
